--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,28 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+/*
+implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+implementation 'org.springframework.boot:spring-boot-starter-web'
+implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+compileOnly 'org.projectlombok:lombok'
+runtimeOnly 'org.postgresql:postgresql'
+annotationProcessor 'org.projectlombok:lombok'
+implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
+annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
+testImplementation 'org.springframework.boot:spring-boot-starter-test'
+ */
