API ile veri çekildi...
Signed-off-by: alperenikinci <alperen.ikinci@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/Java11SpringMovieApp
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-
